--- a/practice-session/style.css
+++ b/practice-session/style.css
@@ -4,7 +4,7 @@ body {
     font-size: 1.15rem;
     line-height: 1.5;
     color: #101d14;
-    background: #062207 url("forest.jpg") no-repeat top center;
+    background: gray;
     background-size: cover;
 }
 
@@ -12,10 +12,24 @@ main {
     width: min(70ch, 100% - 4rem);
     margin-inline: auto;
     padding: 40px;
-    background-color: #ddf1de;
+    background-color: gray;
 }
 
 img, video {
     max-width: 100%;
+    max-width: 200%;
     display: block;
+    height: 40vh;
+}
+
+h1,h2,h3,h4,h5,h6 {
+
+    font-family: system-ui, sans-serif;
+    font-size: 0.95rem;
+}
+
+whole {
+    max-width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
 }
